--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head><link rel="stylesheet" href="new.css">
     </head>
-    <title>LGM task2 </title>
+    <title>Api calls </title>
     <body>
     <div class="container">
         <div class="heder">
-            <div align="center">CANVAS </div>
+            <div align="center">API Calls</div>
             <div align="right" class="btn"><button id="getdata" align ="center" onclick="getData()">GET USER</button></div>
             </div>
             <div id="data">
